fisier nou indexx

--- a/index.html
+++ b/index.html
@@ -1,14 +1,2 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-      voluptas, adipisci dicta, voluptatem sapiente repellat rem ipsam facere
-      distinctio architecto asperiores nulla, quis excepturi ex error nesciunt
-      nemo reprehenderit nostrum. Adipisci, voluptas neque. Consequuntur,
-      possimus eligendi. Quos, aliquam pariatur, magnam esse incidunt dolorum
-      similique amet ipsam quaerat ea dolore voluptas.
-    </p>
-  </body>
-  >
-</html>
+<html></html>
