feat: pisica index

--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
-<html></html>
+<html>
+  <head>
+    <title>jdsvsvj jv</title>
+  </head>
+  <body>
+    <h1>fnjdnbjdfnbjdfnbjdf</h1>
+    <p>djsdfbdjfbjdfnbjdf bdfb ndjfb df b dfbj dfjbdfjb djf bd</p>
+    <img src="pisicauau.jpg"
+  </body>
+</html>
