fisier de structura

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>fnjdnbjdfnbjdfnbjdf</h1>
     <p>djsdfbdjfbjdfnbjdf bdfb ndjfb df b dfbj dfjbdfjb djf bd</p>
-    <img src="pisicauau.jpg"
+    <img src="pisicauau.jpg" width="100" />
   </body>
 </html>
